Fix build script and permissions

--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!-- "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  }, -->
